--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
       <div class="owners">
         <div class="owner-card">
           <strong>Khushi Rai</strong><br />
-          Co-Founder & Volunteer Coordinator<br />
+          Founder & Lead Coordinator<br />
           Dedicated to creating supportive communities for students.
         </div>
         <div class="owner-card">
           <strong>Shahiq Saleem</strong><br />
-          Founder & Lead Coordinator<br />
+          Founder & Volunteer Coordinator<br />
           Passionate about mental health awareness and student empowerment.
         </div>
       </div>
@@ -181,56 +181,18 @@
     <section id="volunteers">
       <h2>Our Volunteers</h2>
       <div class="volunteers">
-        <div class="volunteer-card">
-          <strong>Volunteer 1</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 2</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 3</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 4</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 5</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 6</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 7</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 8</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 9</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
-        <div class="volunteer-card">
-          <strong>Volunteer 10</strong><br />
-          Role or Contribution<br />
-          Brief description.
-        </div>
+        <div class="volunteer-card"><strong>Volunteer 1</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 2</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 3</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 4</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 5</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 6</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 7</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 8</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 9</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 10</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 11</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Volunteer 12</strong><br />Role or Contribution<br />Brief description.</div>
       </div>
     </section>
 
