--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
     <section id="volunteers">
       <h2>Our Volunteers</h2>
       <div class="volunteers">
-        <div class="volunteer-card"><strong>Volunteer 1</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 2</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 3</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 4</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 5</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 6</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 7</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 8</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 9</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 10</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 11</strong><br />Role or Contribution<br />Brief description.</div>
-        <div class="volunteer-card"><strong>Volunteer 12</strong><br />Role or Contribution<br />Brief description.</div>
+        <div class="volunteer-card"><strong>Shreya</strong><br />Lead<br />Content creation team</div>
+        <div class="volunteer-card"><strong>Aarna</strong><br />Member<br />Content creation team</div>
+        <div class="volunteer-card"><strong>Diya</strong><br />Member<br />Content creation team</div>
+        <div class="volunteer-card"><strong>Lisa</strong><br />Lead<br />Research specialist team</div>
+        <div class="volunteer-card"><strong>Yusra</strong><br />Member<br />Research specialist team</div>
+        <div class="volunteer-card"><strong>Tanvi</strong><br />Member<br />Research specialist team</div>
+        <div class="volunteer-card"><strong>Inushka</strong><br />Member<br />Wellness content curator</div>
+        <div class="volunteer-card"><strong>Harapriya</strong><br />Lead<br />Wellness content curator</div>
+        <div class="volunteer-card"><strong>Lianne</strong><br />Member<br />Wellness content curator</div>
+        <div class="volunteer-card"><strong>Palak</strong><br />Member<br />Audience engagement coordinators</div>
+        <div class="volunteer-card"><strong>Navya</strong><br />Lead<br />Audience engagement coordinators</div>
+        <div class="volunteer-card"><strong>Mukund</strong><br />Member<br />Audience engagement coordinators</div>
       </div>
     </section>
 
@@ -217,3 +217,4 @@
   </footer>
 </body>
 </html>
+
